# test_project

./: .env.example  .gitignore  docker-compose.yml  manage.py  pyproject.toml
test_project/: __init__.py  app.py  blueprints.py  config.py  errorhandler.py  extensions.py  index.py  models.py  schemes.py
test_project/author/: sources.py
test_project/book/: sources.py
test_project/utils/: validate_request.py
