[tool.poetry]
name = "test_project"
version = "0.1.0"
description = ""
authors = ["Egor Gorbachev <istox.email@gmail.com>"]

[tool.poetry.scripts]
local_server = "manage:local_server"
local_db_up = "manage:local_db_up"
local_db_down = "manage:local_db_down"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.3"
Flask-Migrate = "^3.1.0"
pydantic = "^1.9.0"
loguru = "^0.5.3"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
